--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 layout: base
 ---
  -->
-
+<area shape="" coords="" href="">
 
 
     <section style="background: url(./img/hero.jpg); background-size: cover; background-position: center center" class="hero">
