--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ layout: base
    <section class="featured-posts no-padding-top">
       <div class="container">
         <!-- Post-->
-        {% for post in site.posts %}
+        {% for post in paginator.posts %}
         <div class="row d-flex align-items-stretch">
           <div class="text col-lg-7">
             <div class="text-inner d-flex align-items-center">
@@ -26,7 +26,7 @@ layout: base
                 </header>
                 <p>{{post.excerpt|strip_html|truncate:100}}</p>
                 <footer class="post-footer d-flex align-items-center"><a href="#" class="author d-flex align-items-center flex-wrap">
-                    <div class="avatar"><img src="img/avatar-1.jpg" alt="..." class="img-fluid"></div>
+                    <div class="avatar"><img src="{{site.baseurl}}/img/avatar-1.jpg" alt="..." class="img-fluid"></div>
                     <div class="title"><span>{{post.author|default:site.author}}</span></div></a>
                   <div class="date"><i class="icon-clock"></i> 2 月以前</div>
                   <div class="comments"><i class="icon-comment"></i>{{post.date|date_to_long_string}}</div>
@@ -37,7 +37,22 @@ layout: base
           <div class="image col-lg-5"><img src="{{site.baseurl}}/img/featured-pic-1.jpeg" alt="..."></div>
         </div>
         {% endfor %}
-    </section>
 
+ <div class="clearfix">
+ {% if paginator.previous_page %}
+        <a class="btn btn-primary float-left" href="{{site.baseurl}}{{paginator.previous_page_path}}">&larr; 上一页</a>
+{% else %}
+        <button class="btn" disabled>没有上一页</button>
+{% endif %}
+
+ {% if paginator.next_page %}
+        <a class="btn btn-primary float-right" href="{{site.baseurl}}{{paginator.next_page_path}}">下一页 &rarr;</a>
+{% else %}
+        <button class="btn float-right" disabled>没有下一页</button>
+{% endif %}
+      </div>
+
+
+    </section>
 
 
